# marked-lieo

./: readme.md
src/aloam/: CMakeLists.txt
src/aloam/launch/: aloam.launch
src/aloam/rviz/: front_end.rviz
src/aloam/src/: aloam_data_pretreat_node.cpp  aloam_factor.hpp  aloam_scan_map_registration_node.cpp  aloam_scan_scan_registration_node.cpp  odom2txt2.cpp  tf2odom2.cpp
src/lieo/: CMakeLists.txt  package.xml  数据集录制.md
src/lieo/config/: params hongkong.yaml  params origin.yaml  params shoutui.yaml  params_gazebo.yaml  params_sjc.yaml
src/lieo/include/: utility.h
src/lieo/launch/: gazebo.launch  sjc.launch
src/lieo/rviz/: rviz.rviz
src/lieo/slam_data/gazebo_chang/: ALOAM.txt  Ground_Truth.txt  LIEO(ours).txt  LIO-SAM.txt
src/lieo/slam_data/pure_chang/: ALOAM.txt  Ground_Truth.txt  LIEO(ours).txt  LIO-SAM.txt
src/lieo/slam_data/sjc/: ALOAM.txt  Ground_Truth.txt  LIEO(ours).txt  LIO-SAM.txt
src/lieo/src/: imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp  odom2txt.cpp
src/lio_sam/: CMakeLists.txt
src/lio_sam/config/: params gps2odom.yaml  params kitti tf.yaml  params kitti.yaml  params park.yaml  params sjc.yaml  params sjtu.yaml  params xsense.yaml  params_gazebo.yaml  params_sjc.yaml
src/lio_sam/launch/: liosam_gazebo.launch  liosam_sjc.launch
src/lio_sam/src/: featureExtraction.cpp  imuPreintegration.cpp  mapOptmization.cpp
